# note_code

./: CMakeLists.txt  git_filter.sh
autoconf/: configure.ac
autoconf/src/: main.c
bazel/: .bazelrc  WORKSPACE  my.bzl
bazel/src/: BUILD  hello.cpp  liba.cpp  libc.cpp  version.cpp
boost/: CMakeLists.txt  boost-po.cpp
caffe/: CMakeLists.txt  libcaffe.cpp  proto.py  test.cpp
cmake/: CMakeLists.txt
cpp/: CMakeLists.txt  algorithm.cc  copy.cc  dtor.cc  fileio.cc  func.cc  gcc_opt_check.cc  lamda.cc  memory.cc  rvalue.cc  typeDeduction.cc  visitor.cc
docker/: env.sh  halide.docker  halide_rv32.docker  qemu.docker  tiramisu.docker
graphviz/: halide_vadd.txt  run.sh  tile.txt  tile1.txt  tile2.txt  tile_explain_bfs.txt  tile_explain_dfs.txt
halide/: CMakeLists.txt  conv.cpp  vadd.cpp
llvm/: CMakeLists.txt  llvm-build.sh
llvm/test/: build.sh  test.c
llvm/tool/: CMakeLists.txt  cl.cpp  cost.cpp  cost.h  dump-bc-inst.cpp
onnx/: test.cpp
protoc/: Makefile  build.sh  my.cpp  my.proto
py/: ndarray.py
test_cpp/: a.cpp
tf/: conv.py  maxpool.py
tvm/: tvm-conv.py  tvm-schedule.py  tvm-test.py
uboot/: README  dhcpd.conf
vim/: vimrc
