project(test)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_STANDARD 14)
#set(CMAKE_CXX_STANDARD_REQUIRED ON)
#set(CMAKE_CXX_EXTENSIONS OFF)
include_directories("/opt/caffe/build/install/include")
link_directories("/opt/caffe/build/install/lib")
add_executable(test test.cpp)
target_link_libraries(test caffe boost_system protobuf glog)
