project(cpp)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
#set(CMAKE_CXX_EXTENSIONS OFF)
#include_directories()
#link_directories()
add_executable(memory memory.cc)
add_executable(func func.cc)
set(TARGET memory PROPERTY CXX_STANDARD 14)
#target_link_libraries(memory boost_system glog)
